# CLI-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.en-US.md  README.md  README.zh-CN.md  bash.exe.stackdump  index.html  package-lock.json  package.json  vite.config.ts
.context/history/: commits.jsonl  commits.md
.github/workflows/: release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: app-data-persistence-contracts.md  app-startup-contracts.md  ccswitch-integration-contracts.md  cli-hook-contracts.md  command-suggestion-contracts.md  git-status-contracts.md  history-stats-contracts.md  index.md  project-file-command-contracts.md  tauri-updater-contracts.md  terminal-runtime-monitoring-contracts.md  webdav-sync-contracts.md  worktree-isolation-contracts.md
.trellis/spec/frontend/: component-guidelines.md  history-session-contracts.md  index.md  quality-guidelines.md  state-management.md
.trellis/spec/guides/: index.md  tauri-user-file-security-checklist.md  version-update-checklist.md
.trellis/tasks/05-25-refine-settings-selection-card-style/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-27-fix-claude-code-terminal-interruption/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-27-fix-terminal-narrow-resize/: prd.md
.trellis/tasks/06-01-fix-codex-cli-cursor-flicker/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-01-fix-terminal-paste-newline-auto-send/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-02-fix-history-session-review/: prd.md  task.json
.trellis/tasks/06-02-fix-new-terminal-group-dropdown-selection/: prd.md  task.json
.trellis/tasks/06-05-jetbrains/: prd.md  (+2 more)
docs/: 功能清单.md
docs/UI/: DESIGN.md  code.html
docs/debugging/: codex-scrollbar-investigation-timeline.md
scripts/: dev-server.mjs  replayProgressModel.test.mjs  tauri-cli.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/conpty/: README.md
src-tauri/src/: app_paths.rs  claude_hook.rs  conpty_sideload.rs  file_watcher.rs  git_watcher.rs  hook_client.rs  lib.rs  main.rs  wsl.rs
src-tauri/src/commands/: background.rs  ccswitch.rs  ccusage.rs  command_suggestion.rs  db_repair.rs  fs.rs  git.rs  git_worktree.rs  history.rs  history_edit.rs  hook_settings.rs  logging.rs  mod.rs  model_pricing.rs  shell.rs  subagent_transcript.rs  sync.rs  system_notification.rs  system_resources.rs  terminal.rs  terminal_shell.rs  version.rs
src-tauri/src/pty/: boundary.rs  manager.rs
src-tauri/src/sync/: mod.rs
src-tauri/src/webdav/: mod.rs
src/components/: AppErrorBoundary.tsx  AppFailureState.tsx  CloseConfirmDialog.tsx  CommandHistoryPanel.tsx  CommandPalette.tsx  CommandTemplatePanel.tsx  ConfigModal.tsx  ExitProgressOverlay.tsx  ExternalSessionSyncDialog.tsx  HistoryWorkspace.tsx  ListClockIcon.tsx  ProviderSwitchModal.tsx  SettingsModal.tsx  SplitTerminalView.tsx  TerminalTabs.tsx  VendorIcon.tsx  WorktreeIcon.tsx  XTermTerminal.tsx  icons.ts
src/hooks/: useKeyboardShortcuts.ts  useSystemResources.ts
src/lib/: aiClipboard.ts  aiPathFormatter.ts  appPaths.ts  assetUrl.ts  db.ts  debugConsole.ts  diffParser.worker.ts  externalSessionGrouping.ts  i18n.ts  logger.ts  projectStartupCommand.ts  queryClient.ts  syncedHistoryContext.ts  syncedHistoryStartup.ts  terminalFileDrag.ts  terminalInputSuggestions.ts  terminalProject.ts  terminalScope.ts  terminalShellProfiles.ts  terminalThemes.ts  types.ts  utils.ts
src/stores/: commandHistoryStore.ts  externalSessionSyncStore.ts  fileExplorerStore.ts  gitStore.ts  historyStore.ts  projectStore.ts  replayStore.ts  sessionStore.ts  settingsStore.ts  syncStore.ts  terminalPaneTree.ts  terminalStore.ts  updateStore.ts  worktreeStore.ts
src/styles/: components.css
(+380 files in other folders)
