[package]
name = "cli-manager"
version = "1.2.5"
description = "A lightweight desktop app for managing CLI tools across multiple projects"
authors = ["tianhao.zhao", "zhang.yuan"]
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cli_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
notify-rust = "4.18"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2"] }
base64 = "0.22"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
memchr = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2.4.2", features = ["semver"] }
# 只读解析 cc-switch.db；复用 tauri-plugin-sql 依赖树中既有的 sqlx/libsqlite3-sys，无新增原生依赖
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
# git 仓库查询（静默读取分支，避免文件 I/O 触发安全软件弹窗）
git2 = "0.19"
# 文件系统监听 + 去抖：fs-watcher 替代 Git 变更面板的定时轮询
notify = "6"
notify-debouncer-mini = "0.4"
fontdb = "0.23"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
